seaqt/QtWidgets/gen_qtreewidget.h

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
QMetaObject* QTreeWidget_virtualbase_metaObject(const void* self);
void* QTreeWidget_virtualbase_metacast(void* self, const char* param1);
int QTreeWidget_virtualbase_metacall(void* self, int param1, int param2, void** param3);
void QTreeWidget_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QTreeWidget_virtualbase_event(void* self, QEvent* e);
struct miqt_array /* of struct miqt_string */  QTreeWidget_virtualbase_mimeTypes(const void* self);
QMimeData* QTreeWidget_virtualbase_mimeData(const void* self, struct miqt_array /* of QTreeWidgetItem* */  items);
bool QTreeWidget_virtualbase_dropMimeData(void* self, QTreeWidgetItem* parent, int index, QMimeData* data, int action);
int QTreeWidget_virtualbase_supportedDropActions(const void* self);
void QTreeWidget_virtualbase_dropEvent(void* self, QDropEvent* event);
void QTreeWidget_virtualbase_setRootIndex(void* self, QModelIndex* index);
void QTreeWidget_virtualbase_keyboardSearch(void* self, struct miqt_string search);
QRect* QTreeWidget_virtualbase_visualRect(const void* self, QModelIndex* index);
void QTreeWidget_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
QModelIndex* QTreeWidget_virtualbase_indexAt(const void* self, QPoint* p);
void QTreeWidget_virtualbase_doItemsLayout(void* self);
void QTreeWidget_virtualbase_reset(void* self);
void QTreeWidget_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
void QTreeWidget_virtualbase_selectAll(void* self);
void QTreeWidget_virtualbase_verticalScrollbarValueChanged(void* self, int value);
void QTreeWidget_virtualbase_scrollContentsBy(void* self, int dx, int dy);
void QTreeWidget_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
void QTreeWidget_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
QModelIndex* QTreeWidget_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
int QTreeWidget_virtualbase_horizontalOffset(const void* self);
int QTreeWidget_virtualbase_verticalOffset(const void* self);
void QTreeWidget_virtualbase_setSelection(void* self, QRect* rect, int command);
QRegion* QTreeWidget_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);